--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>hello shuai</title>
+	<title>hello shuai joy_xi</title>
 </head>
 <body>
 	<h1>hello shuai</h1>
